# ChainReaction

./: CMakeLists.txt  CMakePresets.json  ChainReaction.pro  README.md  cclickcap.cpp  cclickcap.h  cdot.cpp  cdot.h  cdotsmanager.cpp  cdotsmanager.h  cdotswidget.cpp  cdotswidget.h  cspacialmanager.cpp  cspacialmanager.h  cspacialpartition.h  cspatialmanager.cpp  cspatialmanager.h  cutility.cpp  cutility.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tdot.cpp  tdot.h
android/: AndroidManifest.xml  build.gradle
assets/: chainreaction.icns  chainreaction.iss  deploy_qt_chainreaction.sh  makeicns.sh  postinstall.txt
